# KCR

./: CMakeLists.txt  GUI.py  GUI.ui  GUI_shema.py  solver  solver.cpp
solver.dSYM/Contents/Resources/DWARF/: solver
solver.dSYM/Contents/Resources/Relocations/x86_64/: solver.yml
